--- a/README
+++ b/README
@@ -25,6 +25,11 @@ simpleFunctionList
 simpleIAT
     Prints out the import table for the given executable.
 
+simpleIAT_NX
+simpleIAT_NX_vdb
+    Extension of simpleIAT script.  Scripts will set the IAT of a binary to unreadable causing a signal to be thrown on each external library reference and call.  The signal is then caught by a custom notifier class that will log them into a list in the order they were called, and continue the program.  Once process ends it will print out the list of called functions.
+    The difference between the two scripts is that simpleIAT_NX_vdb is meant to be started within an already running vdb instance, simpleIAT_NX can be run from a commandline directly.
+
 simpleNotifier
     Script that implements a notifier class to output data when specific signals are caught.
 
@@ -48,4 +53,8 @@ simpleStalker
 
 simpleStalker_ChildProc
     Uses the stalker functionality to stalk a child process.  Combination of the simpleFollowChild and simpleStalker scripts.
-    
+
+##
+ida_stalker
+    Will colorize an IDA graph based on the contents of simpleStalker output.  
+    Does NOT account for the change of base addresses yet.
